-加入跨域模拟页面（修复）

--- a/boot-web/boot-webmvc/src/main/resources/cross/Login.html
+++ b/boot-web/boot-webmvc/src/main/resources/cross/Login.html
@@ -18,7 +18,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify(data),
-                    credentials: 'include' // 发送凭证信息（如cookies）
+                    // credentials: 'include' // 发送凭证信息（如cookies）
                 });
 
                 if (response.ok) {
