--- a/boot-web/boot-webmvc/src/main/resources/cross/Login.html
+++ b/boot-web/boot-webmvc/src/main/resources/cross/Login.html
@@ -12,7 +12,7 @@
             const data = Object.fromEntries(formData.entries());
 
             try {
-                const response = await fetch('http://localhost:8848/postman/service/method/call', {
+                const response = await fetch('http://8.138.127.55//portal/login/tel/sms', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
